--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,12 @@
             <version>1.0.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest</artifactId>
+            <version>2.1</version>
+        </dependency>
+
     </dependencies>
 
 </project>
