--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,6 @@
 
     </properties>
 
-
     <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -51,12 +50,17 @@
             <artifactId>junit-platform-launcher</artifactId>
             <version>1.0.0</version>
         </dependency>
-
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest</artifactId>
             <version>2.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>5.5.0</version>
+        </dependency>
+
 
     </dependencies>
 
